Avoid team pictures overflow by flex-wrapping

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   <div class="custom-dark-bg-2">
     <div class="d-flex flex-column w-75 h-100 mx-auto p-3 flex-row text-center text-md-start">
       <h1 class="col-md-5 p-md-5 mx col-md-5">MEET THE SUPER-TEAM</h1>
-      <div class="d-flex">
+      <div class="d-flex flex-wrap">
         <div class="col-md-3 p-md-3 mx-auto my-5 text-center">
           <img id="landing-card" class="img-fluid square-card" src="img/asier-card.jpg">
         </div>
